fix time zone bugs, use Instant class instead of LocalDateTime